--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -9,7 +9,7 @@ import { COMPANY_INFO } from '@/constants/site';
 ---
 
 <nav class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+  <div class=" px-4 sm:px-6 lg:px-8">
     <div class="flex justify-between items-center h-16 md:h-20">
       <!-- Logo -->
       <a href="#top" class="flex-shrink-0 transition-opacity hover:opacity-80">
