--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,7 @@ import type { LayoutProps } from '@/types';
 import { DEFAULT_SEO } from '@/constants/site';
 import Navbar from '@/components/layout/Navbar.astro';
 import '@/styles/design-tokens.css';
+import '@/styles/custom-cursor.css';
 
 interface Props extends LayoutProps {}
 
