--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Gallery from "@/components/sections/Gallery.astro";
 import Hero from "@/components/sections/Hero.astro";
 import Services from "@/components/sections/Services.astro";
 import Team from "@/components/sections/Team.astro";
+import WhatWeDo from "@/components/sections/WhatWeDo.astro";
 import { COMPANY_INFO } from "@/constants/site";
 import Layout from "@/layouts/Layout.astro";
 
@@ -25,6 +26,7 @@ const seoData = {
     <Hero />
     <Services />
     <About />
+    <WhatWeDo />
     <Team />
     <Gallery />
     <Contact />
