--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+@theme {
+  --font-montserrat: Montserrat, sans-serif;
+}
+
+body {
+  font-family: var(--font-montserrat);
+}
