--- a/src/styles/design-tokens.css
+++ b/src/styles/design-tokens.css
@@ -55,8 +55,9 @@
   --font-display: 'Playfair Display', Georgia, Cambria, "Times New Roman", Times, serif;
   --font-serif: Georgia, Cambria, "Times New Roman", Times, serif;
   --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace; */
-
-  --font-sans: "Montserrat", sans-serif;
+  --font-gothic: "Special Gothic Expanded One", sans-serif;
+  --font-nunito: "Nunito Sans", sans-serif;
+  --font-anton: "Anton", sans-serif;
   --font-optical-sizing: auto;
   --font-weight: 400;
   --font-style: normal;
@@ -194,15 +195,8 @@
 
   body {
     @apply bg-white text-black;
-    @apply font-sans;
     /* @apply text-base; */
     /* @apply leading-normal; */
-  }
-W
-  h1, h2, h3, h4, h5, h6 {
-    @apply font-sans;
-    /* @apply font-bold;
-    @apply leading-tight; */
   }
 }
 
@@ -234,4 +228,10 @@ W
   .transition-smooth {
     transition: all var(--transition-base);
   }
+}
+
+.hover-brush {
+  cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='-6 -6 32 32'%3E%3Cg transform='rotate(-45 12 12)'%3E%3Cpath fill='none' stroke='%23000000' stroke-width='4' stroke-linejoin='round' stroke-linecap='round' d='m24 10h-24v-5a5.006 5.006 0 0 1 5-5h5v3a1 1 0 0 0 2 0v-3h2v5a1 1 0 0 0 2 0v-5h2v7a1 1 0 0 0 2 0v-6.9a5.009 5.009 0 0 1 4 4.9zm-23.7 2a7.011 7.011 0 0 0 6.7 5h2v4a3 3 0 0 0 6 0v-4h2a7.011 7.011 0 0 0 6.7-5z'/%3E%3Cpath fill='%23ffffff' d='m24 10h-24v-5a5.006 5.006 0 0 1 5-5h5v3a1 1 0 0 0 2 0v-3h2v5a1 1 0 0 0 2 0v-5h2v7a1 1 0 0 0 2 0v-6.9a5.009 5.009 0 0 1 4 4.9zm-23.7 2a7.011 7.011 0 0 0 6.7 5h2v4a3 3 0 0 0 6 0v-4h2a7.011 7.011 0 0 0 6.7-5z'/%3E%3C/g%3E%3C/svg%3E")
+      16 16,
+    pointer;
 }
