--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import About from "@/components/sections/About.astro";
 import Contact from "@/components/sections/Contact.astro";
 import Gallery from "@/components/sections/Gallery.astro";
 import Hero from "@/components/sections/Hero.astro";
+import Reviews from "@/components/sections/Reviews.astro";
 import Services from "@/components/sections/Services.astro";
 import Team from "@/components/sections/Team.astro";
 import WhatWeDo from "@/components/sections/WhatWeDo.astro";
@@ -29,6 +30,7 @@ const seoData = {
     <WhatWeDo />
     <Team />
     <Gallery />
+    <Reviews />
     <Contact />
   </main>
 </Layout>
